--- a/part3/phonebook/package.json
+++ b/part3/phonebook/package.json
@@ -10,11 +10,13 @@
     "build:ui": "cd ../../part2/phonebook && npm run build && cp -r build ../../part3/phonebook",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.11.0",
     "nodemon": "^2.0.5"
   },
   "dependencies": {
